--- a/#000 --- Apps --- 000#/FlashLight/V1.0/app/src/main/res/values/strings.xml
+++ b/#000 --- Apps --- 000#/FlashLight/V1.0/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">FlashLight V1.0</string>
+    <string name="app_name">Free FlashLight Lite V1.0</string>
 </resources>
